いろいろコミット（CoreData追加前）

--- a/DriveLog_swift/Base.lproj/Main.storyboard
+++ b/DriveLog_swift/Base.lproj/Main.storyboard
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RDK-Rv-hIr">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="VL1-6R-lCc">
+            <objects>
+                <navigationController id="RDK-Rv-hIr" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vgO-Su-yTZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="X8d-pu-2tT">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3fR-Zw-HEn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ll1-sg-uQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1382" y="309"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DriveLog_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +36,138 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="0le-3Q-kUs">
+                                <rect key="frame" x="0.0" y="0.0" width="366" height="600"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QHH-gp-oRA">
+                                <rect key="frame" x="20" y="513" width="93" height="30"/>
+                                <state key="normal" title="Start Capture"/>
+                                <connections>
+                                    <action selector="btnAutoCapture:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PL0-Eu-NvN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VVV-ZN-o33">
+                                <rect key="frame" x="20" y="475" width="67" height="30"/>
+                                <state key="normal" title="Capture"/>
+                                <connections>
+                                    <action selector="btnCapture:" destination="BYZ-38-t0r" eventType="touchUpInside" id="edj-HM-apB"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vAY-ql-yw8">
+                                <rect key="frame" x="206" y="359" width="160" height="240"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XpC-NE-XUS">
+                                <rect key="frame" x="20" y="20" width="327" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iyi-uo-9GP">
+                                <rect key="frame" x="20" y="359" width="148" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="rfA-Oc-EkU">
+                        <barButtonItem key="rightBarButtonItem" title="Config" id="iBz-QM-tZY">
+                            <connections>
+                                <action selector="btnConfig:" destination="BYZ-38-t0r" id="EX2-86-uwB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="btnAutoCapture" destination="QHH-gp-oRA" id="DDB-GP-DNt"/>
+                        <outlet property="imageViewVideo" destination="vAY-ql-yw8" id="1Oa-5o-Ulh"/>
+                        <outlet property="labelAddress" destination="XpC-NE-XUS" id="tf3-TM-j6O"/>
+                        <outlet property="labelLog" destination="Iyi-uo-9GP" id="Zhi-rG-te8"/>
+                        <outlet property="mapView" destination="0le-3Q-kUs" id="Tit-HC-Cfp"/>
+                        <segue destination="Ov7-ad-8Yp" kind="presentation" identifier="configSegue" id="H5s-fi-ny7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-602" y="-2"/>
+        </scene>
+        <!--Config View Controller-->
+        <scene sceneID="jzR-gh-X1U">
+            <objects>
+                <viewController id="TTH-ZT-Ssv" customClass="ConfigViewController" customModule="DriveLog_swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wYV-jj-djU"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Qy-52-07I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ghz-RX-b4J">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JoP-r6-70H">
+                                <rect key="frame" x="181" y="80" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Twitter連動" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DcT-jp-Lq5">
+                                <rect key="frame" x="20" y="85" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VrW-jZ-419">
+                                <rect key="frame" x="20" y="148" width="267" height="29"/>
+                                <segments>
+                                    <segment title="50m"/>
+                                    <segment title="100m"/>
+                                    <segment title="500m"/>
+                                    <segment title="1km"/>
+                                    <segment title="0m"/>
+                                </segments>
+                                <connections>
+                                    <action selector="btnDistRangeSegCon:" destination="TTH-ZT-Ssv" eventType="valueChanged" id="Du6-Lo-J8W"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="記録間隔（距離）" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mdb-6l-x1H">
+                                <rect key="frame" x="20" y="119" width="136" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fhC-OO-3sv">
+                        <barButtonItem key="leftBarButtonItem" title="もどる" id="qVY-4l-7fK">
+                            <connections>
+                                <segue destination="JY0-Tm-bUe" kind="unwind" unwindAction="unwindAction:" id="b9M-Jt-Ruo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="distRangeSegCon" destination="VrW-jZ-419" id="jAq-q6-nwQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4r4-0v-d4t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="JY0-Tm-bUe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="210" y="724"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DTy-x9-VQq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ov7-ad-8Yp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g8D-6s-lVy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TTH-ZT-Ssv" kind="relationship" relationship="rootViewController" id="51R-S7-sdO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5UF-th-VLM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-602" y="724"/>
         </scene>
     </scenes>
 </document>
