--- a/DriveLog_swift/Base.lproj/Main.storyboard
+++ b/DriveLog_swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="RDK-Rv-hIr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,30 +9,28 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="VL1-6R-lCc">
+        <!--Preview-->
+        <scene sceneID="IKb-sR-L6I">
             <objects>
-                <navigationController id="RDK-Rv-hIr" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vgO-Su-yTZ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="X8d-pu-2tT">
-                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3fR-Zw-HEn"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ll1-sg-uQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController title="Preview" id="lKg-N3-EYr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Hhj-QT-RFq"/>
+                        <viewControllerLayoutGuide type="bottom" id="iEZ-av-ZWb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QLu-E7-jS3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ySI-lm-Otu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-863.75" y="343.505"/>
+            <point key="canvasLocation" x="96" y="-758"/>
         </scene>
-        <!--View Controller-->
+        <!--Main-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DriveLog_swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="main" title="Main" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="DriveLog_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -79,16 +77,20 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KCc-el-YDj">
+                                <rect key="frame" x="16" y="566" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Config"/>
+                                <connections>
+                                    <action selector="btnConfig:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8DU-0G-OzJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="rfA-Oc-EkU">
-                        <barButtonItem key="rightBarButtonItem" title="Config" id="iBz-QM-tZY">
-                            <connections>
-                                <action selector="btnConfig:" destination="BYZ-38-t0r" id="EX2-86-uwB"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="rfA-Oc-EkU"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="btnAutoCapture" destination="QHH-gp-oRA" id="DDB-GP-DNt"/>
                         <outlet property="imageViewVideo" destination="vAY-ql-yw8" id="1Oa-5o-Ulh"/>
@@ -97,11 +99,12 @@
                         <outlet property="mapView" destination="0le-3Q-kUs" id="Tit-HC-Cfp"/>
                         <segue destination="Ov7-ad-8Yp" kind="modal" identifier="configSegue" id="H5s-fi-ny7"/>
                         <segue destination="j1R-kw-Dqe" kind="push" identifier="PhotoDetailViewSegue" id="wg7-cU-AdQ"/>
+                        <segue destination="lKg-N3-EYr" kind="modal" identifier="previewSegue" id="yoe-bk-bfb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-376.5" y="-2.5"/>
+            <point key="canvasLocation" x="-495" y="-414"/>
         </scene>
         <!--Photo Detail View Controller-->
         <scene sceneID="Hfa-Zp-0aQ">
