--- a/DriveLog_swift/Base.lproj/Main.storyboard
+++ b/DriveLog_swift/Base.lproj/Main.storyboard
@@ -23,46 +23,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WS2-na-K5v">
-                                <rect key="frame" x="36" y="50" width="303" height="294"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WS2-na-K5v">
+                                <rect key="frame" x="37.5" y="95" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WS2-na-K5v" secondAttribute="height" multiplier="1:1" id="Sac-0j-9pb"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UwU-1Y-mVA">
-                                <rect key="frame" x="149" y="593" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <action selector="btnCancel_tapped:" destination="lKg-N3-EYr" eventType="touchUpInside" id="Kit-fo-B6V"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmT-pi-tAU">
-                                <rect key="frame" x="156" y="539" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Save"/>
-                                <connections>
-                                    <action selector="btnSave_tapped:" destination="lKg-N3-EYr" eventType="touchUpInside" id="KKx-eL-d5M"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WAJ-Au-rWf">
-                                <rect key="frame" x="36" y="405" width="303" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vmg-7U-eU4">
-                                <rect key="frame" x="280" y="465" width="51" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vmg-7U-eU4">
+                                <rect key="frame" x="104.5" y="450" width="51" height="31"/>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ro9-S6-cdL">
-                                <rect key="frame" x="52" y="465" width="47" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ro9-S6-cdL">
+                                <rect key="frame" x="37.5" y="455" width="47" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Preview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HP9-GL-td5">
+                                <rect key="frame" x="157" y="69" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WAJ-Au-rWf">
+                                <rect key="frame" x="37.5" y="405" width="300" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmT-pi-tAU">
+                                <rect key="frame" x="170.5" y="491" width="34" height="30"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="btnSave_tapped:" destination="lKg-N3-EYr" eventType="touchUpInside" id="KKx-eL-d5M"/>
+                                    <segue destination="FUj-Ot-DoZ" kind="unwind" identifier="UnwindPreview" unwindAction="unwindAction:" id="VrY-wq-7fg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jmT-pi-tAU" firstAttribute="top" secondItem="Vmg-7U-eU4" secondAttribute="bottom" constant="10" id="3My-zs-GVa"/>
+                            <constraint firstItem="WAJ-Au-rWf" firstAttribute="centerX" secondItem="WS2-na-K5v" secondAttribute="centerX" id="3gX-qt-ORG"/>
+                            <constraint firstItem="Ro9-S6-cdL" firstAttribute="leading" secondItem="WS2-na-K5v" secondAttribute="leading" id="MjP-Wj-dbg"/>
+                            <constraint firstItem="WAJ-Au-rWf" firstAttribute="top" secondItem="WS2-na-K5v" secondAttribute="bottom" constant="10" id="PHt-SC-7ma"/>
+                            <constraint firstItem="WS2-na-K5v" firstAttribute="top" secondItem="HP9-GL-td5" secondAttribute="bottom" constant="5" id="VLn-a1-zkA"/>
+                            <constraint firstItem="WAJ-Au-rWf" firstAttribute="width" secondItem="WS2-na-K5v" secondAttribute="width" id="b7B-Lc-TOf"/>
+                            <constraint firstItem="HP9-GL-td5" firstAttribute="centerX" secondItem="QLu-E7-jS3" secondAttribute="centerX" id="jHj-td-WCB"/>
+                            <constraint firstItem="WS2-na-K5v" firstAttribute="centerX" secondItem="QLu-E7-jS3" secondAttribute="centerX" id="m0a-VV-20B"/>
+                            <constraint firstItem="jmT-pi-tAU" firstAttribute="centerX" secondItem="QLu-E7-jS3" secondAttribute="centerX" id="qY8-fD-1SN"/>
+                            <constraint firstItem="Vmg-7U-eU4" firstAttribute="centerY" secondItem="Ro9-S6-cdL" secondAttribute="centerY" id="qth-qg-R4F"/>
+                            <constraint firstItem="Ro9-S6-cdL" firstAttribute="top" secondItem="WAJ-Au-rWf" secondAttribute="bottom" constant="20" id="rcr-Yp-fv4"/>
+                            <constraint firstItem="Vmg-7U-eU4" firstAttribute="leading" secondItem="Ro9-S6-cdL" secondAttribute="trailing" constant="20" id="suS-XY-rBZ"/>
+                            <constraint firstItem="HP9-GL-td5" firstAttribute="top" secondItem="Hhj-QT-RFq" secondAttribute="bottom" constant="5" id="vVn-my-ezV"/>
+                            <constraint firstItem="WS2-na-K5v" firstAttribute="width" secondItem="QLu-E7-jS3" secondAttribute="width" multiplier="0.8" id="zo9-RO-HxV"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="c2k-Al-Tob"/>
                     <connections>
@@ -72,6 +85,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ySI-lm-Otu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="FUj-Ot-DoZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="95.5" y="-758.5"/>
         </scene>
@@ -104,13 +118,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vAY-ql-yw8">
-                                <rect key="frame" x="-62.5" y="20" width="500" height="667"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="375"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="vAY-ql-yw8" secondAttribute="height" multiplier="3:4" id="iN7-2m-cFE"/>
+                                    <constraint firstAttribute="width" secondItem="vAY-ql-yw8" secondAttribute="height" multiplier="1:1" id="L2f-vd-Hcv"/>
                                 </constraints>
                             </imageView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.69999999999999996" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="0le-3Q-kUs">
-                                <rect key="frame" x="0.0" y="289.5" width="375" height="333.5"/>
+                                <rect key="frame" x="0.0" y="439" width="375" height="184"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QHH-gp-oRA">
                                 <rect key="frame" x="262" y="535" width="32" height="30"/>
@@ -154,12 +168,12 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="vAY-ql-yw8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3NV-yw-LQb"/>
-                            <constraint firstItem="vAY-ql-yw8" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="7kf-5q-HEg"/>
+                            <constraint firstItem="0le-3Q-kUs" firstAttribute="top" secondItem="vAY-ql-yw8" secondAttribute="bottom" id="MBp-V3-QYh"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0le-3Q-kUs" secondAttribute="bottom" id="PMN-Hu-KKj"/>
                             <constraint firstItem="vAY-ql-yw8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wpy-w1-ee2"/>
                             <constraint firstItem="0le-3Q-kUs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XBW-OL-s11"/>
                             <constraint firstItem="0le-3Q-kUs" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="bR1-Cu-Pcy"/>
-                            <constraint firstItem="0le-3Q-kUs" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="grf-5y-16x"/>
+                            <constraint firstItem="vAY-ql-yw8" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="eTO-ao-aid"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
